kustomization/overlays/prod/network-ups-tools/base/networkpolicy/allow-from-nut-shutdown-agent.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-nut-shutdown-agent-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nut-shutdown-agent
      ports:
        - port: nut
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-ups-tools
  policyTypes:
    - Ingress
