kustomization/overlays/prod/network-ups-tools/base/networkpolicy/allow-from-prometheus.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-prometheus-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: network-ups-tools
  policyTypes:
    - Ingress
